--- a/Css/sections/footer.css
+++ b/Css/sections/footer.css
@@ -46,21 +46,30 @@
 }
 @media only screen and (max-width: 600px){
     .footer{
-        min-height: 1vh;
-        width:64%;
+        min-height: 5vh;
+        width:100%;
+        display: flex;
+    }
+    .footer__menu{
+        display: flex;
+        justify-content:center;
+        align-items: center;
+        gap:20px;
+        margin-left:10em;
+        list-style: none;
     }
     .footer h3{
         font-size: 16px;
     }
     .nav-links{
-        margin-left:-5%;
+        margin-left:-0%;
     }
     .socials{
-        margin-left:11%;
+        margin-left:0%;
 
     }
     .socials .header__menu li{
-        margin:0 10px;
+        margin:0 5px;
     }
     .nav-links{
         display: none;
