--- a/Css/sections/hero.css
+++ b/Css/sections/hero.css
@@ -143,7 +143,9 @@
 }
 @media only screen and (max-width: 600px){
     .hero{
-        overflow-x: hidden;
+        display: flex;
+    min-height: calc(100vh - 74px);
+    overflow: hidden;
     }
     .hero__image{
         display: none;
@@ -152,31 +154,40 @@
         padding:32px;
     }
     .hero-content-info h1{
-        font-size: 40px;
-        width: 60%;
+        font-size: 54px;
+        width: 100%;
+        text-align: center;
     }
     .hero-content-info p{
-        font-size: 10px;
-        width: 60%;
+        font-size: 14px;
+        text-align: center;
         margin: 10px 0;
     }
     .hero-content__buttons{
         margin: 28px 0;
         gap:24px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     .hero-content__testimonial{
         padding:16px 32px;
         gap:10px;
-        max-height: 30%;
+        width:100%;
+        
         display: flex;
-        max-width:64%;
+        
+        margin-top: -15em;
         flex-direction: column;
+
     }
     .hero-content__customer{
         gap:10px;
+
     }
     .hero-content__customer h4{
         font-size:32px;
+        
     }
     .hero-content__customer p{
         font-size:10px;
