--- a/Css/sections/hero.css
+++ b/Css/sections/hero.css
@@ -144,6 +144,7 @@
 @media only screen and (max-width: 600px){
     .hero{
         display: flex;
+        margin-top:-220px;
     min-height: calc(100vh - 74px);
     overflow: hidden;
     }
