--- a/Css/sections/header.css
+++ b/Css/sections/header.css
@@ -2,6 +2,9 @@
     display: flex;
     overflow: hidden;
 }
+.header__nav i{
+    display: none;
+}
 .header__logo{
 flex: 1;
 display: flex;
@@ -33,13 +36,46 @@ padding:20px;
     font-size: 18px;
 }
 
-.header__menu-mobile{
-    list-style: none;
-}
+
 @media only screen and (max-width: 600px){
     .header__nav{
         display: flex;
         
+    }
+    .header__menu{
+        display: none;
+    }
+    .show-menu{
+        position: absolute;
+        top:7%;
+        width: 100%;
+        height:31.8rem;
+        display: block ;
+        text-align: center;
+        backdrop-filter: blur(50px);
+        z-index: 2;
+    }
+    .show-menu  li{
+        margin: 20px 0;
+        font-size: 22px;
+        font-weight: 600;
+        font-family: var(--playfair-display);
+        transition: .2s ease-in;
+        padding:15px;
+    } 
+    .show-menu  li:hover{
+        color:  var(--primary-color);
+        background-color: rgba(255, 255, 255, 0.5);
+    }
+    #btn{
+        display: block;
+        position: absolute;
+        right:20px;
+        top:5px;
+       font-size: 30px;
+        color:#fff;
+        cursor: pointer;
+        z-index: 1000;
     }
     .header__logo{
         padding:10px;
@@ -48,8 +84,6 @@ padding:20px;
     .header__logo h4{
         font-size: 20px;
     }
-    .header__menu{
-        display: none;
-    }
+    
     
 }
