--- a/Css/sections/subscribe.css
+++ b/Css/sections/subscribe.css
@@ -84,7 +84,8 @@
     .get-btn{
         width:80px;
     height:33px;
-    margin-top:64%;
+    margin-top:70%;
+    cursor: pointer;
     margin-left:0%;
     }
 }
